tools/syntax_stubs.h

void free(void *p);
int strcmp(const char *a, const char *b);
unsigned long strlen(const char *s);
#define _(s) (s)
typedef struct Hash HASH;
typedef struct point P;
typedef struct buffer B;
typedef struct options OPTIONS;
struct charmap {
	struct charmap *next;
	const char *name;
	int type;
	int (*is_punct)(struct charmap*,int);
	int (*is_print)(struct charmap*,int);
	int (*is_space)(struct charmap*,int);
	int (*is_alpha_)(struct charmap*,int);
	int (*is_alnum_)(struct charmap*,int);
	int (*to_lower)(struct charmap*,int);
	int (*to_upper)(struct charmap*,int);
};
struct macro { char _pad[48]; };
struct point {
	void *link_next;
	void *link_prev;
	B *b;
	char _pad[112 - 24];
};
struct buffer {
	char _pad0[192];
	OPTIONS o;
	char _pad1[632 - 192 - 344];
};
void *joe_malloc(ptrdiff_t n);
void *joe_realloc(void *p, ptrdiff_t n);
void joe_free(void *p);
char *zdup(const char *s);
HASH *htmk(ptrdiff_t len);
void *htadd(HASH *ht, const char *name, void *val);
void *htfind(HASH *ht, const char *name);