tools/scrn_stubs.h

struct cap {
	char *tbuf;
	struct sortentry *sort;
	ptrdiff_t sortlen;
	char *abuf;
	char *abufp;
	long div;
	long baud;
	const char *pad;
	void (*out)(void *, char);
	void *outptr;
	int dopadding;
};
typedef struct cap CAP;
void *mmove(void *d, const void *s, ptrdiff_t sz);
CAP *setcap(CAP *cap, long baud, void (*out)(void *, char), void *outptr);
ptrdiff_t utf8_encode(char *buf, int c);
int joe_wcwidth(int wide, int c);